load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "prometheus-exporter-logged-users_lib",
    srcs = ["main.go"],
    importpath = "prometheus-exporter-logged-users",
    visibility = ["//visibility:private"],
    deps = ["@com_github_akamensky_argparse//:go_default_library"],
)

go_binary(
    name = "exporter-binary",
    embed = [":prometheus-exporter-logged-users_lib"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "deploy",
    srcs = [":exporter-binary"],
    outs = ["prometheus-exporter-logged-users"],
    cmd = "cp $(location :exporter-binary) $(OUTS)",
)
