load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/all4dich/prometheus-exporter-logged-users/server",
    visibility = ["//visibility:private"],
    deps = [
        "//local/message",
        "//local/welcome",
        "@com_github_akamensky_argparse//:argparse",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
